# ADT-Projet

./: CMakeLists.txt  Project  README.md  customization.xml  filetypes.xml  github_settings.xml  main.c  project.default.xml  vcs.xml
text/: analyse.c  analyse.h  generator.c  generator.h  search.c  search.h
trie/hach/: hach_trie.c  hach_trie.h
trie/matrice/: matrice_trie.c  matrice_trie.h
trie/utilities/: trie_utilities.c  trie_utilities.h
